# par2018

./: .gitattributes  .gitignore  README.md
src/automake/amhello/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
src/automake/amhello/autom4te.cache/: output.1  requests  traces.0  traces.1
src/automake/amhello/src/: Makefile  Makefile.am  Makefile.in  hello  main.c
src/automake/amhello/src/.deps/: main.Po
src/automake/gcc/devel/hello/: Makefile  Makefile.am  Makefile.in  bug  bug.c  config.status  configure  configure.in  factorial  factorial.c  hello  hello.c  hello.cpp  helloc++  main.c  sum.cpp
src/automake/gcc/devel/hello/.deps/: hello.Po
src/automake/gcc/devel/hello/autoconf-2.69/: Makefile  config.status
src/automake/gcc/devel/hello/autoconf-2.69/automake-1.15/: Makefile  config.status  runtest
src/automake/gcc/devel/hello/autoconf-2.69/automake-1.15/doc/: aclocal-1.15.1  automake-1.15.1
src/automake/gcc/devel/hello/autoconf-2.69/automake-1.15/libtool-2.4.6/: Makefile  config.h  config.status  libtool  libtoolize
src/automake/gcc/devel/hello/autoconf-2.69/doc/: Makefile
src/automake/gcc/devel/hello/autoconf-2.69/lib/: Makefile  autom4te.cfg
src/automake/gcc/devel/hello/autoconf-2.69/man/: Makefile
src/automake/gcc/devel/hello/autoconf-2.69/tests/: Makefile  atconfig  atlocal  autoconf  autoheader  autom4te  autoreconf  autoscan  autoupdate  ifnames  wrapper.in
src/automake/gcc/devel/hello/autom4te.cache/: output.1  requests  traces.0  traces.1
src/automake/gcc/devel/hello/bug.dSYM/Contents/: Info.plist
(+149 files in other folders)
